test/spec/func-local-before-param.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/func-local-before-param.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/func-local-before-param.fail.wast:1:28: syntax error, unexpected PARAM
(module (func (local i32) (param i32)))
                           ^^^^^
;;; STDERR ;;)
